# pastexam

./: .gitignore  LICENSE  README.md  backup.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  restore.sh
.github/: dependabot.yml
backend/: .coveragerc  .env.example  Dockerfile  Dockerfile.dev  README.md  alembic.ini  app.py  config.py  db.py  main.py  migrate.py  models.py  pyproject.toml  routes.py  utils.py
backend/alembic/: env.py
backend/alembic/versions/: 850cafd2d390_add_gemini_api_key_to_user.py  d13b220009b6_add_notifications_table.py  e353baf54db9_initial_migration.py
backend/app/: main.py  worker.py
backend/app/api/: api.py
backend/app/api/endpoints/: archives.py  auth.py  courses.py
backend/app/api/services/: ai_exam.py  archives.py  auth.py  courses.py  meme.py  notifications.py  statistics.py  users.py
backend/app/core/: config.py
backend/app/db/: base_class.py  init_db.py  seed_data.yaml  session.py
backend/app/models/: models.py
backend/app/services/: auth.py
backend/app/templates/: ai_exam_prompt.txt
backend/app/utils/: auth.py  auth_ws.py  jwt.py  storage.py
backend/scripts/: seed_db.py
backend/tests/: conftest.py  test_worker.py
backend/tests/api/: test_ai_exam.py  test_archive_discussion.py  test_archives.py  test_auth.py  test_courses.py  test_meme.py  test_notifications.py  test_statistics.py  test_users.py
backend/tests/db/: test_init_db.py
backend/tests/services/: test_auth_service.py
backend/tests/utils/: test_auth_utils.py  test_storage_utils.py
(+113 files in other folders)
