[project]
name = "pastexam-backend"
version = "0.1.0"
description = "Past Exam API Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "fastapi[standard]>=0.115.12",
    "greenlet>=3.2.3",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "minio>=7.2.15",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.9.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "redis>=6.2.0",
    "sqlmodel>=0.0.24",
    "uvicorn[standard]>=0.34.3",
]
